# evdevhook2

./: .gitmodules  AppImageBuilder.template.yml  AppImageBuilder.yml  Dockerfile  ExampleConfig.ini  README.md  config-docs.md  meson.build
.github/workflows/: appimage.yml  meson.yml  release.yml
src/: Config.vala  DeviceTypes.ini  EvdevCemuhookDevice.vala  Server.vala  evdevhook2.gresource.xml  main.vala  meson.build
src/dbus/: upower_core.vala  upower_device.vala
subprojects/: .gitignore  gcemuhook.wrap
vapi/: libevdev.deps  libevdev.vapi  libudev.vapi
